# alpamayo-faithfulness

./: .gitignore  LICENSE  README.md  pyproject.toml
afh/: __init__.py  parser.py  runner.py  scorecard.py  trace.py
afh/axes/: __init__.py  consistency.py  counterfactual.py  grounding.py  stability.py
docs/: FAITHFULNESS.md  SETUP_RUNPOD.md
fixtures/: cf_0ea6fd88.json  real_alpamayo_labeled_raw_diag.json  real_alpamayo_labeled_sample.json  real_alpamayo_raw_diag.json  real_alpamayo_sample.json  sample_traces.json
runners/: compare_parsers.py  explore_labels.py  project_agent.py  run_counterfactual.py  run_inference.py  setup_runpod.sh
tests/: test_end_to_end_cold.py
